--- a/stories/index.html
+++ b/stories/index.html
@@ -3364,13 +3364,13 @@
     <tr>
       <td>0002</td>
       <td><a href="http://my.africanstorybook.org/stories/look-animals">Look at the animals</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#ar0002">ar</a>, <a href="#da0002">da</a>, <a href="#de0002">de</a>, <a href="#eo0002">eo</a>, <a href="#gu0002">gu</a>, <a href="#ko0002">ko</a>, <a href="#nn0002">nn</a>, <a href="#no0002">no</a>, <a href="#pa0002">pa</a>, <a href="#tl0002">tl</a>, <a href="#yue0002">yue</a>, <a href="#zh0002">zh</a></td>
     </tr>
     <tr>
       <td>0003</td>
       <td><a href="http://my.africanstorybook.org/stories/school-clothes">School clothes</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#ar0003">ar</a>, <a href="#da0003">da</a>, <a href="#eo0003">eo</a>, <a href="#gu0003">gu</a>, <a href="#ko0003">ko</a>, <a href="#nn0003">nn</a>, <a href="#no0003">no</a>, <a href="#pa0003">pa</a>, <a href="#tl0003">tl</a>, <a href="#yue0003">yue</a>, <a href="#zh0003">zh</a></td>
     </tr>
     <tr>
@@ -3400,18 +3400,18 @@
     <tr>
       <td>0009</td>
       <td><a href="http://my.africanstorybook.org/stories/where-my-cat">Where is my cat?</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#aeb0009">aeb</a>, <a href="#ar0009">ar</a>, <a href="#da0009">da</a>, <a href="#de0009">de</a>, <a href="#eo0009">eo</a>, <a href="#gu0009">gu</a>, <a href="#ja0009">ja</a>, <a href="#jam0009">jam</a>, <a href="#ko0009">ko</a>, <a href="#nn0009">nn</a>, <a href="#no0009">no</a>, <a href="#pa0009">pa</a>, <a href="#sv0009">sv</a>, <a href="#tl0009">tl</a>, <a href="#yue0009">yue</a>, <a href="#zh0009">zh</a></td>
     </tr>
     <tr>
       <td>0010</td>
-      <td><a href="http://my.africanstorybook.org/stories/animals-uganda-7">The Animals of Uganda</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/animals-uganda-6">The Animals of Uganda</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
       <td><a href="#eo0010">eo</a>, <a href="#yue0010">yue</a>, <a href="#zh0010">zh</a></td>
     </tr>
     <tr>
       <td>0011</td>
-      <td><a href="http://my.africanstorybook.org/stories/nsangabisibe-n%E2%80%99-mudduawulira">Nsangabisibe n’ Mudduawulira</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/father-and-son">Father and son</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
       <td><a href="#nl0011">nl</a></td>
     </tr>
@@ -3430,7 +3430,7 @@
     <tr>
       <td>0030</td>
       <td><a href="http://my.africanstorybook.org/stories/feelings">Feelings</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#aeb0030">aeb</a>, <a href="#ar0030">ar</a>, <a href="#ko0030">ko</a>, <a href="#pa0030">pa</a>, <a href="#tl0030">tl</a>, <a href="#yue0030">yue</a>, <a href="#zh0030">zh</a></td>
     </tr>
     <tr>
@@ -3454,7 +3454,7 @@
     <tr>
       <td>0053</td>
       <td><a href="http://my.africanstorybook.org/stories/me">This is me</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#gu0053">gu</a>, <a href="#yue0053">yue</a>, <a href="#zh0053">zh</a></td>
     </tr>
     <tr>
@@ -3478,13 +3478,13 @@
     <tr>
       <td>0067</td>
       <td><a href="http://my.africanstorybook.org/stories/cooking">Cooking</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#ar0067">ar</a>, <a href="#de0067">de</a>, <a href="#gu0067">gu</a>, <a href="#ko0067">ko</a>, <a href="#no0067">no</a>, <a href="#pa0067">pa</a>, <a href="#tl0067">tl</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
     </tr>
     <tr>
       <td>0068</td>
       <td><a href="http://my.africanstorybook.org/stories/how-many">How many?</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#yue0068">yue</a></td>
     </tr>
     <tr>
@@ -3496,13 +3496,13 @@
     <tr>
       <td>0073</td>
       <td><a href="http://my.africanstorybook.org/stories/counting">Counting</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#de0073">de</a>, <a href="#eo0073">eo</a>, <a href="#ko0073">ko</a>, <a href="#nn0073">nn</a>, <a href="#no0073">no</a>, <a href="#tl0073">tl</a>, <a href="#yue0073">yue</a>, <a href="#zh0073">zh</a></td>
     </tr>
     <tr>
       <td>0078</td>
       <td><a href="http://my.africanstorybook.org/stories/adventures-supercow">The adventures of Supercow</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#yue0078">yue</a>, <a href="#zh0078">zh</a></td>
     </tr>
     <tr>
@@ -3549,7 +3549,7 @@
     </tr>
     <tr>
       <td>0106</td>
-      <td><a href="http://my.africanstorybook.org/stories/namukuru’s-bicycle">Namukuru’s bicycle</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/namu%E2%80%99s-bicycle">Namukuru’s bicycle</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
       <td><a href="#nl0106">nl</a></td>
     </tr>
@@ -3568,13 +3568,13 @@
     <tr>
       <td>0112</td>
       <td><a href="http://my.africanstorybook.org/stories/my-body">My body</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#aeb0112">aeb</a>, <a href="#ar0112">ar</a>, <a href="#de0112">de</a>, <a href="#eo0112">eo</a>, <a href="#gu0112">gu</a>, <a href="#ko0112">ko</a>, <a href="#nn0112">nn</a>, <a href="#no0112">no</a>, <a href="#pa0112">pa</a>, <a href="#tl0112">tl</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
     </tr>
     <tr>
       <td>0120</td>
       <td><a href="http://my.africanstorybook.org/stories/hair">Hair</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#ar0120">ar</a>, <a href="#gu0120">gu</a>, <a href="#ko0120">ko</a>, <a href="#no0120">no</a>, <a href="#pa0120">pa</a>, <a href="#tl0120">tl</a>, <a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
     </tr>
     <tr>
@@ -3592,7 +3592,7 @@
     <tr>
       <td>0123</td>
       <td><a href="http://my.africanstorybook.org/stories/lets-go">Let’s go</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#yue0123">yue</a>, <a href="#zh0123">zh</a></td>
     </tr>
     <tr>
@@ -3610,7 +3610,7 @@
     <tr>
       <td>0129</td>
       <td><a href="http://my.africanstorybook.org/stories/lazy-little-brother">Lazy little brother</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#ar0129">ar</a>, <a href="#de0129">de</a>, <a href="#gu0129">gu</a>, <a href="#ko0129">ko</a>, <a href="#nn0129">nn</a>, <a href="#no0129">no</a>, <a href="#pa0129">pa</a>, <a href="#tl0129">tl</a>, <a href="#yue0129">yue</a>, <a href="#zh0129">zh</a></td>
     </tr>
     <tr>
@@ -3676,7 +3676,7 @@
     <tr>
       <td>0176</td>
       <td><a href="http://my.africanstorybook.org/stories/listen">Listen</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#gu0176">gu</a>, <a href="#zh0176">zh</a></td>
     </tr>
     <tr>
@@ -3688,7 +3688,7 @@
     <tr>
       <td>0199</td>
       <td><a href="http://my.africanstorybook.org/stories/apedori-%C9%9B%C9%94ng-aswam-n%CA%89-i-can-do">I can do this</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#yue0199">yue</a>, <a href="#zh0199">zh</a></td>
     </tr>
     <tr>
@@ -3706,7 +3706,7 @@
     <tr>
       <td>0206</td>
       <td><a href="http://my.africanstorybook.org/stories/teeth">Teeth</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#gu0206">gu</a>, <a href="#nn0206">nn</a>, <a href="#no0206">no</a>, <a href="#yue0206">yue</a>, <a href="#zh0206">zh</a></td>
     </tr>
     <tr>
@@ -3717,7 +3717,7 @@
     </tr>
     <tr>
       <td>0212</td>
-      <td><a href="http://my.africanstorybook.org/stories/my-little-goat">My little goat</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/my-little-goat-colour">My little goat</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
       <td><a href="#gu0212">gu</a>, <a href="#zh0212">zh</a></td>
     </tr>
@@ -3730,7 +3730,7 @@
     <tr>
       <td>0215</td>
       <td><a href="http://my.africanstorybook.org/stories/breakfast">Breakfast</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#aeb0215">aeb</a>, <a href="#de0215">de</a>, <a href="#gu0215">gu</a>, <a href="#yue0215">yue</a>, <a href="#zh0215">zh</a></td>
     </tr>
     <tr>
@@ -3742,19 +3742,19 @@
     <tr>
       <td>0223</td>
       <td><a href="http://my.africanstorybook.org/stories/domestic-animals">Domestic animals</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#fa0223">fa</a>, <a href="#gu0223">gu</a>, <a href="#zh0223">zh</a></td>
     </tr>
     <tr>
       <td>0231</td>
       <td><a href="http://my.africanstorybook.org/stories/weather-book">Weather book</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#ar0231">ar</a>, <a href="#es0231">es</a>, <a href="#fa0231">fa</a>, <a href="#hi0231">hi</a>, <a href="#ko0231">ko</a>, <a href="#nl0231">nl</a>, <a href="#nn0231">nn</a>, <a href="#no0231">no</a>, <a href="#pa0231">pa</a>, <a href="#tl0231">tl</a>, <a href="#yue0231">yue</a>, <a href="#zh0231">zh</a></td>
     </tr>
     <tr>
       <td>0234</td>
       <td><a href="http://my.africanstorybook.org/stories/andiswa-soccer-star">Andiswa Soccer Star</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#ar0234">ar</a>, <a href="#ko0234">ko</a>, <a href="#no0234">no</a>, <a href="#pa0234">pa</a>, <a href="#tl0234">tl</a>, <a href="#zh0234">zh</a></td>
     </tr>
     <tr>
@@ -3784,7 +3784,7 @@
     <tr>
       <td>0264</td>
       <td><a href="http://my.africanstorybook.org/stories/letters">Letters</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#zh0264">zh</a></td>
     </tr>
     <tr>
@@ -3796,7 +3796,7 @@
     <tr>
       <td>0271</td>
       <td><a href="http://my.africanstorybook.org/stories/two">Two</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#ar0271">ar</a>, <a href="#gu0271">gu</a>, <a href="#ko0271">ko</a>, <a href="#nn0271">nn</a>, <a href="#no0271">no</a>, <a href="#pa0271">pa</a>, <a href="#tl0271">tl</a>, <a href="#yue0271">yue</a>, <a href="#zh0271">zh</a></td>
     </tr>
     <tr>
@@ -3819,7 +3819,7 @@
     </tr>
     <tr>
       <td>0293</td>
-      <td><a href="http://my.africanstorybook.org/stories/i-enjoyninafurahia">I enjoy/Ninafurahia</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/ninafurahi-i-enjoy">I enjoy</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#aeb0293">aeb</a></td>
     </tr>
@@ -3850,7 +3850,7 @@
     <tr>
       <td>0309</td>
       <td><a href="http://my.africanstorybook.org/stories/little-and-big">Little and big</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#aeb0309">aeb</a>, <a href="#fa0309">fa</a>, <a href="#gu0309">gu</a>, <a href="#yue0309">yue</a>, <a href="#zh0309">zh</a></td>
     </tr>
     <tr>
@@ -3862,7 +3862,7 @@
     <tr>
       <td>0313</td>
       <td><a href="http://my.africanstorybook.org/stories/brown">Brown</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#zh0313">zh</a></td>
     </tr>
     <tr>
@@ -3874,7 +3874,7 @@
     <tr>
       <td>0319</td>
       <td><a href="http://my.africanstorybook.org/stories/teacher-mulongo">Teacher Mulongo</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#nl0319">nl</a></td>
     </tr>
     <tr>
@@ -3928,7 +3928,7 @@
     <tr>
       <td>0360</td>
       <td><a href="http://my.africanstorybook.org/stories/counting-cats">Counting cats</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/4.0/">CC-BY-NC</a></td>
+      <td><a href="https://creativecommons.org/licenses/by-nc/4.0/">CC-BY-NC</a></td>
       <td><a href="#aeb0360">aeb</a>, <a href="#hi0360">hi</a>, <a href="#no0360">no</a>, <a href="#zh0360">zh</a></td>
     </tr>
   </tbody>
