--- a/stories/pa/0001_ਇੱਕ-ਬਹੁਤ-ਹੀ-ਲੰਬਾ-ਆਦਮੀ.html
+++ b/stories/pa/0001_ਇੱਕ-ਬਹੁਤ-ਹੀ-ਲੰਬਾ-ਆਦਮੀ.html
@@ -119,7 +119,7 @@ Cornelius Gulere<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
 
-<p>ਉਸ ਨੇ ਆਪਣਾ ਘਰ ਛੱਡ ਦਿੱਤਾ ਅਤੇ ਇੱਕ ਵੱਡੇ ਜੰਗਲ ਵਿਚ ਰਹਿਣ ਲਗ ਪਿਆ। ਉਹ ਕਈ ਸਾਲ ਲਈ ਜੀਉਂਦਾ ਰਿਹਾ।</p>
+<p>ਉਸ ਨੇ ਆਪਣਾ ਘਰ ਛੱਡ ਦਿੱਤਾ ਅਤੇ ਇੱਕ ਵੱਡੇ ਜੰਗਲ ਵਿਚ ਰਹਿਣ ਲੱਗ ਪਿਆ। ਉਹ ਕਈ ਸਾਲ ਲਈ ਜਿਉਂਦਾ ਰਿਹਾ।</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
