--- a/stories/pa/0006_ਅਨਾਨਸੀ-ਅਤੇ-ਬੁੱਧੀ.html
+++ b/stories/pa/0006_ਅਨਾਨਸੀ-ਅਤੇ-ਬੁੱਧੀ.html
@@ -56,7 +56,7 @@ Ghanaian folktale<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/03.jpg" /></p>
 
-<p>ਇੱਕ ਦਿਨ, ਨਯਾਮੀ ਨੇ ਫ਼ੈਸਲਾ ਕੀਤਾ ਕਿ ਉਹ ਬੁੱਧੀ ਦਾ ਘੜਾ ਅਨਾਨਸੀ ਨੂੰ ਦੇਵੇਗਾ। ਜੱਦ ਵੀ ਅਨਾਨਸੀ ਮਿੱਟੀ ਦੇ ਘੜੇ ਵਿੱਚ ਵੇਖਦਾ, ਉਹ ਕੁਝ ਨਵਾਂ ਸਿੱਖਦਾ ਸੀ। ਇਹ ਬਹੁਤ ਦਿਲਚਸ ਸੀ!</p>
+<p>ਇੱਕ ਦਿਨ, ਨਯਾਮੀ ਨੇ ਫ਼ੈਸਲਾ ਕੀਤਾ ਕਿ ਉਹ ਬੁੱਧੀ ਦਾ ਘੜਾ ਅਨਾਨਸੀ ਨੂੰ ਦੇਵੇਗਾ। ਜੱਦ ਵੀ ਅਨਾਨਸੀ ਮਿੱਟੀ ਦੇ ਘੜੇ ਵਿੱਚ ਵੇਖਦਾ, ਉਹ ਕੁਝ ਨਵਾਂ ਸਿੱਖਦਾ ਸੀ। ਇਹ ਬਹੁਤ ਦਿਲਚਸਪ ਸੀ!</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
