--- a/stories/pa/0027_ਫ਼ੈਸਲਾ.html
+++ b/stories/pa/0027_ਫ਼ੈਸਲਾ.html
@@ -98,7 +98,7 @@ Ursula Nafula<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/09.jpg" /></p>
 
-<p>ਲੋਕੀ ਟੁੱਟੇ ਕੱਚ ਤੋਂ ਕੱਟ ਜਾਂਦੇ ਜੋ ਲਾਪਰਵਾਹੀ ਨਾਲ ਸੁੱਟਿਆ ਹੋਇਆ ਸੀ।</p>
+<p>ਲੋਕੀ ਟੁੱਟੇ ਕੱਚ ਤੋਂ ਕੱਟ ਜਾਂਦੇ ਜੋ ਲਾਪਰਵਾਹੀ ਨਾਲ ਸੁੱਟਿਆ ਹੁੰਦਾ ਸੀ।</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
