--- a/stories/pa/0001_ਇੱਕ-ਬਹੁਤ-ਹੀ-ਲੰਬਾ-ਆਦਮੀ_slides.html
+++ b/stories/pa/0001_ਇੱਕ-ਬਹੁਤ-ਹੀ-ਲੰਬਾ-ਆਦਮੀ_slides.html
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
-<p>ਉਸ ਨੇ ਆਪਣਾ ਘਰ ਛੱਡ ਦਿੱਤਾ ਅਤੇ ਇੱਕ ਵੱਡੇ ਜੰਗਲ ਵਿਚ ਰਹਿਣ ਲਗ ਪਿਆ। ਉਹ ਕਈ ਸਾਲ ਲਈ ਜੀਉਂਦਾ ਰਿਹਾ।</p>
+<p>ਉਸ ਨੇ ਆਪਣਾ ਘਰ ਛੱਡ ਦਿੱਤਾ ਅਤੇ ਇੱਕ ਵੱਡੇ ਜੰਗਲ ਵਿਚ ਰਹਿਣ ਲੱਗ ਪਿਆ। ਉਹ ਕਈ ਸਾਲ ਲਈ ਜਿਉਂਦਾ ਰਿਹਾ।</p>
 <center>
 <strong>11</strong>
 </center>
