--- a/stories/pa/0027_ਫ਼ੈਸਲਾ_slides.html
+++ b/stories/pa/0027_ਫ਼ੈਸਲਾ_slides.html
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/09.jpg" /></p>
-<p>ਲੋਕੀ ਟੁੱਟੇ ਕੱਚ ਤੋਂ ਕੱਟ ਜਾਂਦੇ ਜੋ ਲਾਪਰਵਾਹੀ ਨਾਲ ਸੁੱਟਿਆ ਹੋਇਆ ਸੀ।</p>
+<p>ਲੋਕੀ ਟੁੱਟੇ ਕੱਚ ਤੋਂ ਕੱਟ ਜਾਂਦੇ ਜੋ ਲਾਪਰਵਾਹੀ ਨਾਲ ਸੁੱਟਿਆ ਹੁੰਦਾ ਸੀ।</p>
 <center>
 <strong>8</strong>
 </center>
