--- a/audio/asp/fr/0262_magozwe_audio-slides.html
+++ b/audio/asp/fr/0262_magozwe_audio-slides.html
@@ -166,7 +166,7 @@
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/08.jpg" /></p>
 <p>Il faisait froid. Magozwe se tenait dans la rue mendiant, quand soudain un homme s'approcha de lui et dit : « Bonjour, je m'appelle Thomas. Je travaille tout près d'ici, dans un endroit où tu pourras manger », dit-il.</p>
-<p>Il lui montra au loin jaune au toit bleu. « J'espère que tu viendras manger», lui dit-il.</p>
+<p>Il lui montra au loin une maison jaune au toit bleu. « J'espère que tu viendras manger», lui dit-il.</p>
 <p>Magozwe regarda l'homme, puis la maison, et lui répondit : « Peut-être », puis il s'en alla.</p>
 <audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/fr/0262_magozwe/ogg/08.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/fr/0262_magozwe/mp3/08.mp3" type="audio/mpeg"> </audio>
 <center>
