update audio index

--- a/audio/asp/index.html
+++ b/audio/asp/index.html
@@ -105,6 +105,7 @@
             <li><a href="fr/0294_les-bananes-de-grand-mere_audio-slides.html" target="_blank">Les bananes de grand-mère</a></li>
             <li><a href="fr/0296_tom-le-vendeur-de-bananes_audio-slides.html" target="_blank">Tom le vendeur de bananes</a></li>
             <li><a href="fr/0302_le-feu_audio-slides.html" target="_blank">Le feu</a></li>
+            <li><a href="fr/0315_la-chanson-de-sakima_audio-slides.html" target="_blank">La chanson de Sakima</a></li>
             <li><a href="fr/0324_le-jour-que-je-quitta-la-maison-pour-la-ville_audio-slides.html" target="_blank">Le jour que je quitta la maison pour la ville</a></li>
             <li><a href="fr/0327_compter-les-animaux_audio-slides.html" target="_blank">Compter les animaux</a></li>
             <li><a href="fr/0337_les-enfants-de-cire_audio-slides.html" target="_blank">Les enfants de cire</a></li>
